--- a/portfoilo-app/resources/css/app.css
+++ b/portfoilo-app/resources/css/app.css
@@ -1,3 +1,3 @@
-.Hello {
-    color: whitesmoke;
-}
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
