--- a/portfolio/public/css/styles.css
+++ b/portfolio/public/css/styles.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');;
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
-body {
+
+.dashboardbody {
     background-color:#ffffff;
 }
 
@@ -31,4 +35,13 @@ body {
 .container2 {
     font-family: 'Quicksand', sans-serif;
     margin: 10px;
+}
+
+.indexpage {
+    background-image:url(/pic/155512299a145dc08c4c5695c166ff3a.gif);
+
+}
+
+.dashboardbutton {
+    color:white;
 }
