--- a/portfolio/public/css/styles2.css
+++ b/portfolio/public/css/styles2.css
@@ -53,3 +53,30 @@ ul li a:hover::before{
     width: 100%;
     filter: drop-shadow(0 0 25px var(--clr));
 }
+
+.facebook {
+    display:flex;
+    gap: 30px;
+}
+
+.fb {
+    border-radius: 20%;
+}
+
+.instagram {
+    display:flex;
+    gap: 30px;
+}
+
+.ig {
+    border-radius: 20%;
+}
+
+.youtube {
+    display:flex;
+    gap: 30px;
+}
+
+.yt {
+    border-radius: 30%;
+}
