--- a/portfolio/public/css/styles.css
+++ b/portfolio/public/css/styles.css
@@ -36,3 +36,9 @@
     font-family: 'Quicksand', sans-serif;
     margin: 10px;
 }
+
+.navheader {
+    display: flex;
+    margin : auto;
+    gap: 30px;
+}
