--- a/portfolio/public/css/styles2.css
+++ b/portfolio/public/css/styles2.css
@@ -1,5 +1,6 @@
 .dashboardbutton {
     color:#ffffff;
+    
 }
 
 * {
@@ -46,7 +47,7 @@ ul li a::before{
     width: 0%;
     overflow: hidden;
     transition: 1s;
-    border-right: 8px solid var(--clr);
+    border-right: 5px solid var(--clr);
 }
 
 ul li a:hover::before{
@@ -80,3 +81,25 @@ ul li a:hover::before{
 .yt {
     border-radius: 30%;
 }
+
+img:hover {
+    /* Start the shake animation and make the animation last for 0.5 seconds */
+    animation: shake 0.5s;
+  
+    /* When the animation is finished, start again */
+    animation-iteration-count: infinite;
+  }
+  
+  @keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
